2008-09-16  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* db/mlstats_model_dbdesigner.png
	* db/mlstats_model_dbdesigner.sql
	* db/mlstats_model_dbdesigner.xml
	
	DB schema modified to include a is_response_of FK.

2008-07-22 Liliana Tovar <lilitovar@gsyc.es>

	* db/data_model.sql
	* db/mlstats_model_dbdesigner.png
	* db/mlstats_model_dbdesigner.sql
	* db/mlstats_model_dbdesigner.xml
	
	Added database schema.

2008-07-22 Liliana Tovar <lilitovar@gsyc.es>

	* pymlstats/analyzer.py:
	* pymlstats/database.py:
	* pymlstats/datamodel.py:
	
	Database model modified. 
	Added a numeric identifier for people entries, instead of using the 
	email address. 'author_email_address' deleted from messages table. The 
	value can be found into the 'messages_people' table.

2008-03-11 Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* debian/changelog:
	* debian/control:
	* debian/copyright:
	* debian/mlstats.docs:
	* debian/rules:
	* man/mlstats.1:
	* setup.py:

	The Debian package is now Lintian compliant. The Python egg files
	are now automatically generated, so the mlstats.egg-info directory
	has been removed.
	
2007-12-03 Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* NEWS:
	* debian/rules:
	* debian/changelog:
	* debian/control:
	* mlstats.egg-info/PKG-INFO:

	Release 0.3.3
	
2007-12-03 Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* pymlstats/version.py:
	* pymlstats/main.py:

	Remote files are now analyzed in ascending chronological
	order. Version number updated. 

2007-09-05 Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* pymlstats/version.py:
	* debian/control:
	* debian/changelog:
	* debian/copyright:
	* debian/rules:
	* mlstats.egg-info/SOURCES.txt:
	* mlstats.egg-info/PKG-INFO:	

	Added copyright file for the Debian package.

	Updated version number for trunk sources.
	
2007-08-21 Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* pymlstats/datamodel.py:
	* pymlstats/database.py:
	* db/data_model.sql:

	Fixing bug #314.
