@@ -1,3 +1,9 @@
+2008-10-10 Juan Francisco Gato Luis <jfcogato@gsyc.es>
+
+        * pymlstats/database.py
+	added filter function that erase the quotation marks from the e-mails
+	address
+
 2008-09-16  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>
 
 	* db/mlstats_model_dbdesigner.png
